# triangle

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  nativelib.cpp
app/src/main/cpp/nvg/: nanovg_gl.h  stb_image.h  stb_truetype.h
app/src/main/java/com/example/: MainActivity.kt  TriangleFragment.kt  TriangleJNI.java
app/src/main/res/layout/: fragment_triangle.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
